refactor: restructure exam hierarchy to cargo-owned thematic definitions
- Implement 'inheritance' model: ConcursoCargo now centrally defines thematic sections (weights, syllabus) via SecaoCargo entity.
- Prova is now strictly single-cargo; multiple papers for a cargo link to the same thematic section definitions.
- Refactor entities, repositories, and Mappers to support the new path: Questao -> ProvaSecao -> SecaoCargo -> ConcursoCargo.
- Enforce business rule: A question cannot occupy different thematic sections for the same cargo context.
- Update Analytics and Simulado scoring engines to align with new data paths.